--- a/context/1.html
+++ b/context/1.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Welcome + warning on source updates"</title>
-    <link rel="canonical" href="../Welcomewarningonsourceupdates.html" />
+    <title>Redirecting to "Welcome"</title>
+    <link rel="canonical" href="../Welcome.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../Welcomewarningonsourceupdates.html" />
+    <meta http-equiv="refresh" content="0; url=../Welcome.html" />
 </head>
 
 </html>
