--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             
             data-openlvl="1"
         >
-            <ul><li id="Introduction" ><a href="Introduction.html">Introduction</a><ul><li id="Welcome" ><a href="Welcome.html">Welcome</a></li><li id="Whatsnew" ><a href="Whatsnew.html">What's new</a></li></ul></li><li id="GettingStarted" ><a href="GettingStarted.html">Getting Started</a><ul><li id="Systemrequirements" ><a href="Systemrequirements.html">System requirements</a></li><li id="Gettinghelp" ><a href="Gettinghelp.html">Getting help</a></li></ul></li></ul>
+            <ul><li id="Introduction" data-jstree='{"icon": "icon-4"}'><a href="Introduction.html">Introduction</a><ul><li id="Welcome" data-jstree='{"icon": "icon-14"}'><a href="Welcome.html">Welcome</a></li><li id="Whatsnew" ><a href="Whatsnew.html">What's new</a></li></ul></li><li id="GettingStarted" data-jstree='{"icon": "icon-6"}'><a href="GettingStarted.html">Getting Started</a><ul><li id="Systemrequirements" ><a href="Systemrequirements.html">System requirements</a></li><li id="Gettinghelp" ><a href="Gettinghelp.html">Getting help</a></li></ul></li></ul>
         </div>
       </div>  <!-- /contents-->
       
