--- a/Whatsnew.html
+++ b/Whatsnew.html
@@ -28,7 +28,7 @@
   <meta property="og:title" content="What's new" />
   <meta property="og:type" content="article" />
   <meta property="og:description" content="" />
-  <meta property="og:site_name" content="index" /> 
+  <meta property="og:site_name" content="V400 for Dummies" /> 
 
   <!-- Bootstrap core CSS -->
   <link href="vendors/bootstrap-3.4.1/css/bootstrap.min.css" rel="stylesheet"/>
@@ -75,7 +75,7 @@
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>        
     </button>
-    <h1>index</h1>
+    <h1>V400 for Dummies</h1>
     
   </header>
 
@@ -189,7 +189,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Copyright &copy; &lt;Dates&gt; by &lt;Authors&gt;. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Copyright &copy; 2023 by SmallDragoon. All Rights Reserved.</div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
