--- a/ADXL345.html
+++ b/ADXL345.html
@@ -194,7 +194,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Copyright &copy; &lt;Dates&gt; by &lt;Authors&gt;. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Copyright &copy; 2023 by SmallDragoon. All Rights Reserved.</div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
