--- a/context/31.html
+++ b/context/31.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Mainsail / Kliiper Moonraker KlipperScreen"</title>
-    <link rel="canonical" href="../MainsailKliiperMoonrakerKlipperS.html" />
+    <title>Redirecting to "What is Mooraker ?"</title>
+    <link rel="canonical" href="../WhatisMooraker.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../MainsailKliiperMoonrakerKlipperS.html" />
+    <meta http-equiv="refresh" content="0; url=../WhatisMooraker.html" />
 </head>
 
 </html>
