--- a/context/5.html
+++ b/context/5.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "Getting help"</title>
-    <link rel="canonical" href="../Gettinghelp.html" />
+    <title>Redirecting to "Getting Help"</title>
+    <link rel="canonical" href="../GettingHelp.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../Gettinghelp.html" />
+    <meta http-equiv="refresh" content="0; url=../GettingHelp.html" />
 </head>
 
 </html>
