--- a/context/4.html
+++ b/context/4.html
@@ -3,11 +3,11 @@
 <html>
 
 <head>
-    <title>Redirecting to "System requirements"</title>
-    <link rel="canonical" href="../Systemrequirements.html" />
+    <title>Redirecting to "What is Mainsail ?"</title>
+    <link rel="canonical" href="../WhatisMainsail.html" />
     <meta name="robots" content="noindex">
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=../Systemrequirements.html" />
+    <meta http-equiv="refresh" content="0; url=../WhatisMainsail.html" />
 </head>
 
 </html>
